changed settings.py to include default DB

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ django = "==3.0.1"
 gunicorn = "==19.9.0"
 whitenoise = "==4.1.4"
 psycopg2 = "*"
+dj-database-url = "*"
 
 [requires]
 python_version = "3.7"
