--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ gunicorn = "==19.9.0"
 whitenoise = "==4.1.4"
 psycopg2 = "*"
 dj-database-url = "*"
+pylint-django = "*"
 
 [requires]
 python_version = "3.7"
